--- a/Microservices/Microservices.Banking.Api/appsettings.json
+++ b/Microservices/Microservices.Banking.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BankingDbConnection": "Server=localhost,1433;Database=BankingDB;User=SA;Password=YourStrong@Passw0rd;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
