--- a/Microservices/Microservices.Banking.Application/Microservices.Banking.Application.csproj
+++ b/Microservices/Microservices.Banking.Application/Microservices.Banking.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Microservices.Banking.Domain\Microservices.Banking.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
