Implemented Publish and SendCommand for Banking Microservice

--- a/Microservices/Microservices.Banking.Domain/Microservices.Banking.Domain.csproj
+++ b/Microservices/Microservices.Banking.Domain/Microservices.Banking.Domain.csproj
@@ -5,10 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="CommandHandlers\" />
-    <Folder Include="Events\" />
     <Folder Include="EventHandlers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Microservices.Domain.Core\Microservices.Domain.Core.csproj" />
   </ItemGroup>
 
 </Project>
