--- a/Microservices/Microservices.Transfer.Data/Microservices.Transfer.Data.csproj
+++ b/Microservices/Microservices.Transfer.Data/Microservices.Transfer.Data.csproj
@@ -5,8 +5,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Context" />
-      <Folder Include="Repository" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.3.20181.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0-preview.3.20181.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-preview.3.20181.2" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0-preview.3.20181.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Microservices.Transfer.Domain\Microservices.Transfer.Domain.csproj" />
     </ItemGroup>
 
 </Project>
