--- a/Microservices/Microservices.Transfer.Domain/Microservices.Transfer.Domain.csproj
+++ b/Microservices/Microservices.Transfer.Domain/Microservices.Transfer.Domain.csproj
@@ -7,10 +7,10 @@
     <ItemGroup>
       <Folder Include="CommandHandlers" />
       <Folder Include="Commands" />
-      <Folder Include="EventHandlers" />
-      <Folder Include="Events" />
-      <Folder Include="Interfaces" />
-      <Folder Include="Models" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Microservices.Domain.Core\Microservices.Domain.Core.csproj" />
     </ItemGroup>
 
 </Project>
